--- a/Public_KINOPOISK/index.css
+++ b/Public_KINOPOISK/index.css
@@ -1,29 +1,125 @@
-a{
-    color: blue;
-    text-decoration: none;
-
-}
-.header{
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+.headerBackGround{
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: rgb(29, 26, 26);
-    color: #fff;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-.header_section{
-    display: flex;
-    align-items: center;
-}
-.header_item{
-    padding: 10px 15px;
-    font-size: 20px;
-    margin-left: 5px;
-}
-.header_item:hover{
-    background-color: rgb(92, 90, 90);
-    border-radius: 4px;
-}
-.headerButton{
+    background-color: rgb(31, 31, 31);
+    margin: 0px;
+    height: 72px;
+    }
+    .block{
+    height: 72px;
+    width: 100px;
+    }
+    .block1{
+    height: 72px;
+    width: 70px;
+    font-family: 'Montserrat', sans-serif;
+    }
+    .block2{
+    height: 72px;
+    width: 30px;
+    }
+    .primeLogo{
+    transition: 0,3s;
+    margin-top: 10px;
+    outline: none;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
+    }
+    .primeLogo:hover{
+        margin-top: 12px;
+        transform: scale(1.1);
+    }
+    .online{
+    display: flex;
+    height: 72px;
+    width: 250px;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    }
+    .triangle-right {
+    margin-top: 30px;
+    width: 0;
+    height: 0;
+    border-top: 6px solid transparent;
+    border-left: 12px solid whitesmoke;
+    border-bottom: 6px solid transparent;
+    }
+    .searchbar{
+    height: 30px;
+    color: whitesmoke;
+    background-color: rgb(61,61,61);
+    margin-top: 15px;
+    }
+    .join{
+    font-size: 15px;
+    margin-top: 30px;
+    margin-left: 10px;
+    border: none;
+    background-color: rgb(31, 31, 31);
+    color: rgb(201, 201, 201);
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    }
+    .join:hover{
+    color: white;
+    }
+    .kino{
+    display: flex;
+    }
+    .TV{
+    margin-top: 23px;
+    height: 25px;
+    width: 25px;
+    }
+    .KinoNaLubomTV{
+    margin-top: 25px;
+    color: rgb(201, 201, 201);
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    width: 200px;
+    font-family: 'Montserrat', sans-serif;
+    
+    }
+    .KinoNaLubomTV:hover{
+    color: white;
+    }
+    
+    .emptySecond{
+    height: 72px;
+    width: 10px;
+    }
+    .empty{
+    height: 72px;
+    width: 10px;
+    }
+    .online-kino{
+    color: rgb(201, 201, 201);
+    margin-top: 27px;
+    
+    font-family: 'Montserrat', sans-serif;
+    }
+    .online-kino:hover{
+    color: white;
+    }
+    .kinopoisk{
+    margin-top: 30px;
+    border: 0px;
+    padding: 0px;
+    background-color: rgb(31, 31, 31);
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    }
+   
+body{
+    margin: 0px;
 }
+.emptyThird{
+   width: 500px; 
+}
+    
