--- a/Public_KINOPOISK/kinopoisk.css
+++ b/Public_KINOPOISK/kinopoisk.css
@@ -9,16 +9,55 @@ li{
      text-decoration: none;
     list-style:none;
 }
-.hbkino{
+
+#left, #right {
+background:gainsboro;
+position: fixed;
+        }
+    #left, #right {
+            top: 0; bottom: 0;
+            width: 124px;
+                }
+            #left { left: 0; }
+            #right { right: 0; }  
+
+.advertisement{
     display: flex;
     justify-content: center;
-
+    max-width: 100%;
+    width: 100%;
 }
 .chubacca{
     display: flex;
     justify-content: right;
-    margin-top: -20px;
+    margin-top: 20px;
     padding:5px;
+    margin-right: 190px;
+    border-radius: 5px;
+}
+.tickets{
+    font-size: 20pt;
+    margin-left: 382px;
+    justify-content: right;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
+}
+.movies_container{
+    display: flex;
+    justify-content: center;
+}
+
+.movies_item{
+    width: 70%;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 12pt;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 318px;
+
+}
+h1{
+    font-size: 12pt;
 }
 
