--- a/Public_kino/kinopoisk.css
+++ b/Public_kino/kinopoisk.css
@@ -8,6 +8,7 @@ a{
 li{
      text-decoration: none;
     list-style:none;
+    
 }
 
 #left, #right {
@@ -27,37 +28,57 @@ position: fixed;
     max-width: 100%;
     width: 100%;
 }
-.chubacca{
+
+.familybudget{
     display: flex;
     justify-content: right;
     margin-top: 20px;
     padding:5px;
-    margin-right: 190px;
-    border-radius: 5px;
-}
-.tickets{
-    font-size: 20pt;
-    margin-left: 382px;
-    justify-content: right;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-right: 199px;
 
 }
-.movies_container{
-    display: flex;
-    justify-content: center;
+.tickets{
+    font-size: 16pt;
+    margin-left: 363px;
+    justify-content: right;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    padding: 20px;
 }
 
 .movies_item{
-    width: 70%;
+    width: 62%;
     justify-content: space-between;
-    text-align: center;
-    font-size: 12pt;
-    display: flex;
+    text-align: left;
+    font-size: 10pt;
+    display: inline-flex;
     font-family: Arial, Helvetica, sans-serif;
-    margin-left: 318px;
-
+    margin-left: 384px;
+    float: left;
 }
 h1{
-    font-size: 12pt;
+    font-size: 10pt;
+    text-align: left;
+    font-weight: bold;
 }
 
+.redactor{
+    justify-content: center;
+    display: flex;
+    font-size: 16pt;
+    margin-left: -548px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+    padding: 20px;
+}
+
+.reccomendations_item{
+    width: 62%;
+    justify-content: space-between;
+    text-align: left;
+    font-size: 10pt;
+    display: inline-flex;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 384px;
+    float: left;
+}
